--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -16,7 +16,7 @@
             <a href="insert.html" class="btn btn-primary">Agregar Libro</a>
         </div>
 
-        <table class="table table-bordered table-striped">
+        <table class="table table-bordered table-striped" id ="books-table">
             <thead class="table-dark">
                 <tr>
                     <th>Título</th>
